# The_Game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format_code.sh  main.cpp
src/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
src/engine/: animation.h  crossair.cpp  crossair.h  gameCharacter.cpp  gameCharacter.h  keys.cpp  keys.h  macro.h  ressourceManager.cpp  ressourceManager.h  weapon.cpp  weapon.h
src/game/: game.cpp  game.h  player.cpp  player.h
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
